welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:2: error: type mismatch;
 found   : Unit
 required: Boolean
def isFacingTrail():Boolean = {
                              ^